# Indie-Studio-2022

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: FindYMLlib.cmake  Findraylib.cmake
encapsulation/: IDrawable.hpp
encapsulation/3D/: Collision.cpp  Collision.hpp
encapsulation/3D/model/: Model.cpp  Model.hpp  ModelAnimation.cpp  ModelAnimation.hpp
encapsulation/3D/shape/circle/: Circle.cpp  Circle.hpp
encapsulation/3D/shape/cube/: Cube.cpp  Cube.hpp
encapsulation/3D/shape/cylinder/: Cylinder.cpp  Cylinder.hpp
encapsulation/3D/shape/line/: Line.cpp  Line.hpp
encapsulation/3D/shape/point/: Point.cpp  Point.hpp
encapsulation/3D/shape/sphere/: Sphere.cpp  Sphere.hpp
encapsulation/3D/shape/triangle/: Triangle.cpp  Triangle.hpp
encapsulation/Audio/: Device.cpp  Device.hpp  IAudio.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
encapsulation/BoundingBox/: BoundingBox.cpp  BoundingBox.hpp
encapsulation/Camera/: Camera.hpp  Camera2D.cpp  Camera3D.cpp
encapsulation/Color/: Color.cpp  Color.hpp
encapsulation/Cursor/: Cursor.cpp  ICursor.hpp
encapsulation/Events/: IEvents.hpp  KeyEvents.cpp  MouseEvents.cpp  TouchEvents.cpp
encapsulation/IShapes/: Circle.hpp  Collision.cpp  Collision.hpp  Line.cpp  Line.hpp  Pixel.hpp  Polygons.hpp  Rectangle.hpp  Triangle.hpp
encapsulation/Matrix/: Matrix.cpp  Matrix.hpp
encapsulation/RessourcesManager/: ResourcesManager.cpp  ResourcesManager.hpp
encapsulation/Screenspace/: Screenspace.cpp  Screenspace.hpp
encapsulation/Sprite/: Picture.cpp  Picture.hpp  Shaders.cpp  Shaders.hpp  Texture.cpp  Texture.hpp
encapsulation/Text/: Font.cpp  Font.hpp  Text.cpp  Text.hpp
encapsulation/TimeRelated/: TimeRelated.cpp  TimeRelated.hpp
encapsulation/Tools/: Directory.cpp  File.cpp  GetterFiles.cpp  Misc.cpp  Tools.hpp  storage.cpp
encapsulation/Vector/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
encapsulation/Window/: Begin.cpp  End.cpp  Getters.cpp  Others.cpp  Setters.cpp  Window.hpp
game_engine/: Core.cpp  Core.hpp  Scene.cpp  Scene.hpp
game_engine/config/: End.yaml  Menu.yaml  Setting.yaml  cinematic.yml  game.yml  playerMode.yaml
game_engine/objects/: ButtonEngine.hpp  Camera3DEngine.hpp  ModelEngine.hpp  MusicEngine.hpp  SoundEngine.hpp  SpriteEngine.hpp  TextEngine.hpp
ressources/Assets/: License.txt
ressources/Assets/IQM/: bomb.iqm  bomberman4.iqm  bombermanRun.iqm  bombermanWalk.iqm  fire.iqm  fireAnim.iqm
src/: IndieStudio.cpp  IndieStudio.hpp  main.cpp
src/End/: EndWin.cpp  EndWin.hpp
src/Game/: Bomb.cpp  Bomb.hpp  Direction.hpp  End.cpp  End.hpp  Exception.hpp  Fire.cpp  Fire.hpp  IA.cpp  IA.hpp  IPlayer.hpp  Player.cpp  Player.hpp
src/Map/: Biome.hpp  Map.cpp  Map.hpp
src/Menu/: Menu.cpp  Menu.hpp
src/PlayerMode/: PlayerMode.cpp  PlayerMode.hpp
src/Setting/: Setting.cpp  Setting.hpp  SliderBar.hpp
src/backMenu/: ButtonTexture.cpp  ButtonTristate.cpp  ButtonTristate.hpp  Menu.cpp  Menu.hpp  Settings.cpp  Settings.hpp
src/cinematic/: cinematic.cpp  cinematic.hpp
utils/: clock.hpp
